Added a cat image and a few more elements

--- a/test.html
+++ b/test.html
@@ -1,3 +1,14 @@
-<h1> Heading here </h1>
-<p>Hey look at this paragraph</p>
-<a href="https://google.com" target="_blank" title="Let's go to google">Click this awesome link!</a>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Test Page</title>
+    </head>
+    <body>
+        <h1> Heading here </h1>
+        <p>Hey look at this <b>paragraph</b></p>
+        <a href="https://google.com" target="_blank" title="Let's go to google">Click this awesome link!</a>
+        <p>My name is: <br>
+            Cameron  </p>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/4/4d/Cat_November_2010-1a.jpg">
+</body>
+</html>
