Changed the Heading again

--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
         <title>Test Page</title>
     </head>
     <body>
-        <h1> Heading here , You heard what I said</h1>
+        <h1> Heading of the year</h1>
         <p>Hey look at this <b>paragraph</b></p>
         <a href="https://google.com" target="_blank" title="Let's go to google">Click this awesome link!</a>
         <p>My name is: <br>
