--- a/crash-test.html
+++ b/crash-test.html
@@ -1,6 +1,9 @@
-<doctype html!>
-<meta="charset-8">
-<html>
+<DOCTYPE html!>
+    <html lang="en">
+        <head>
+<meta charset="UTF-8">
+<title>Crash Bandicoot Rules</title>
+        </head>
  <body> 
   <header>
    <img src="https://i2-prod.dailystar.co.uk/tech/gaming/article21695234.ece/ALTERNATES/s615/0_CrashBandicoot.jpg">
