Updated and rewrote the code on the crash-test and index html
Crash-Test.HTML
Added some comments and used it to reference the layout of the index code.

Index.HTML
Erased and then recreated the code using a combo of the previously written Crash code and the course video lesson for this first web page.
Added comments, Added Copyright icon and Favicon to the site. Also, changed the friends images to links for more information on them.

--- a/crash-test.html
+++ b/crash-test.html
@@ -5,10 +5,12 @@
 <title>Crash Bandicoot Rules</title>
 </head>
  <body> 
+    <!--Header Element-->
   <header>
    <img src="https://i2-prod.dailystar.co.uk/tech/gaming/article21695234.ece/ALTERNATES/s615/0_CrashBandicoot.jpg">
    <h1>CRASH BANDICOOT</h1>
   </header>
+  <!--Main Element-->
   <main>
    <h2>ABOUT CRASH</h2>
    <p>Crash works to end Dr. Neo Cortex's plans to dominate the world.</p>
