--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
        <title>Crash Bandicoot Rules</title>
-       <link rel="icon" href="https://i2-prod.dailystar.co.uk/tech/gaming/article21695234.ece/ALTERNATES/s615/0_CrashBandicoot.jpg">
+       <link rel="icon" href="img/crash-avatar.jpg">
 </head>
 <body>
     <!--Header Element-->
     <header>
-        <img srcset="https://i2-prod.dailystar.co.uk/tech/gaming/article21695234.ece/ALTERNATES/s615/0_CrashBandicoot.jpg">
+        <img src="img/crash-avatar.jpg">
         <h1> CRASH BANDICOOT</h1>
     </header>
     <main>        
         <h2>ABOUT CRASH</h2>
         <p>Crash works to end Dr. Neo Cortex's plans to dominate the world.</p>
-        <img src="https://image.cnbcfm.com/api/v1/image/106774161-1604326520320-Crash_Bandicoot.jpg?v=1604326585">
+        <img src="img/crash-photo.jpg">
        
         <!--Characteristics-->
         <h2>CRASH'S CHARACTERISTICS</h2>
