Created CSS file and add some styles

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
        <title>Crash Bandicoot Rules</title>
        <link rel="icon" href="img/crash-avatar.jpg">
+       <link rel="stylesheet" type="text/css" href="css/hero.css">
 </head>
 <body>
     <!--Header Element-->
