Updated some HTML and Completed CSS code

--- a/index.html
+++ b/index.html
@@ -2,19 +2,22 @@
 <html lang="en">
 <head>
        <title>Crash Bandicoot Rules</title>
-       <link rel="icon" href="img/crash-avatar.jpg">
+       <link rel="icon" href="https://i2-prod.dailystar.co.uk/tech/gaming/article21695234.ece/ALTERNATES/s615/0_CrashBandicoot.jpg">
        <link rel="stylesheet" type="text/css" href="css/hero.css">
+       <link rel="preconnect" href="https://fonts.googleapis.com">
+       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+       <link href="https://fonts.googleapis.com/css2?family=Alkatra&display=swap" rel="stylesheet">
 </head>
 <body>
     <!--Header Element-->
     <header>
-        <img src="img/crash-avatar.jpg">
+        <img src="https://i2-prod.dailystar.co.uk/tech/gaming/article21695234.ece/ALTERNATES/s615/0_CrashBandicoot.jpg">
         <h1> CRASH BANDICOOT</h1>
     </header>
     <main>        
         <h2>ABOUT CRASH</h2>
         <p>Crash works to end Dr. Neo Cortex's plans to dominate the world.</p>
-        <img src="img/crash-photo.jpg">
+        <img src="https://image.cnbcfm.com/api/v1/image/106774161-1604326520320-Crash_Bandicoot.jpg?v=1604326585">
        
         <!--Characteristics-->
         <h2>CRASH'S CHARACTERISTICS</h2>
@@ -29,9 +32,9 @@
         <h2>FRIENDS</h2>
         <p>Crash has a band of friends that he fights with to defeat the evil Dr. Neo Cortex. Check out the links below for more information.</p>
         <ul>
-            <li><a href="https://crashbandicoot.fandom.com/wiki/Tawna_Bandicoot" target="_blank">Tawna Bandicoot</a></li>
-            <li><a href="https://hero.fandom.com/wiki/Coco_Bandicoot" target="_blank">Coco Bandicoot</a></li>
-            <li><a href="https://crashbandicoot.fandom.com/wiki/Aku_Aku" target="_blank">Aku Aku</a></li>
+            <li><a href="https://hero.fandom.com/wiki/Coco_Bandicoot" target="_blank">Coco Bandicoot</a></li> <img src="https://www.giantbomb.com/a/uploads/square_small/46/462814/3247238-0754884960-latest.png">
+            <li><a href="https://crashbandicoot.fandom.com/wiki/Tawna_Bandicoot" target="_blank">Tawna Bandicoot</a></li> <img src="https://pbs.twimg.com/media/FOeeNmuXMAErzSM.jpg">
+            <li><a href="https://crashbandicoot.fandom.com/wiki/Aku_Aku" target="_blank">Aku Aku</a></li> <img src="https://www.crashmania.net/images/encyclopedia/characters/aku-aku/description2.jpg">
         </ul>
     </main>
 
